Fixed centering of items and changed font size, removed scrollbar as it's not needed.

--- a/frontend/app/src/components/ChallengeGrid/style.scss
+++ b/frontend/app/src/components/ChallengeGrid/style.scss
@@ -45,25 +45,17 @@
   //overflow-y: scroll;
   scrollbar-width: thin; /* "auto" or "thin"  */
   scrollbar-color: $connected-blue; /* scroll thumb & track */
-}
-
-.ChallengeItem.open > .ChallengeItem--text {
-  align-self: center;
-  width: 100%;
-}
-
-.ChallengeItem.open::-webkit-scrollbar {
-  width: 5px; /* width of the entire scrollbar */
-}
-
-.ChallengeItem.open::-webkit-scrollbar-track {
-  background: transparent; /* color of the tracking area */
-}
-
-.ChallengeItem.open::-webkit-scrollbar-thumb {
-  background-color: $connected-blue; /* color of the scroll thumb */
-  border-radius: 20px; /* roundness of the scroll thumb */
-  border: 3px solid $connected-blue; /* creates padding around scroll thumb */
+  span.ChallengeItem--title {
+    @extend %font-title;
+    color: $connected-blue;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 1.3rem;
+    line-height: normal;
+    align-self: center;
+    text-align: center;
+    align-self: center;
+  }
 }
 
 @keyframes card-flip {
@@ -110,14 +102,15 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
+  text-align: center;
   &--text {
     text-align: center;
     align-self: center;
 
     @include bp-full {
-      text-align: left;
-      align-items: left;
-      align-self: flex-end;
+      text-align: center;
+      align-items: center;
+      align-self: center;
       width: 65%;
     }
 
@@ -126,16 +119,19 @@
       color: $connected-blue;
       font-weight: bold;
       text-transform: uppercase;
-      font-size: 1.3rem;
+      font-size: 2rem;
       line-height: normal;
-      align-self: flex-start;
+      align-self: center;
+      text-align: center;
+      align-self: center;
     }
 
     p.ChallengeItem--description {
       color: $connected-blue;
       line-height: normal;
       margin-bottom: 0;
-      align-self: flex-start;
+      text-align: center;
+      align-self: center;
     }
   }
 
